# ChannelSFormer

./: LICENSE.md  README.md  basic_test.py  flake.nix  pyproject.toml  server.py
channelsformer/: config.py  main.py  profiling.py
channelsformer/configs/imagenet/: channelsformer_small.yaml  channelsformer_tiny.yaml  channelsformer_tiny_singlecls.yaml  channelsformer_tiny_spacefirst.yaml  channelsformer_tiny_wchannelemb.yaml  channelvit_small.yaml  channelvit_tiny.yaml  channelvit_tiny_wochannelemb.yaml
channelsformer/configs/jumpcp/: channelsformer_small.yaml  channelsformer_tiny.yaml  channelsformer_tiny_channel_independent.yaml  channelsformer_tiny_channelfirst.yaml  channelsformer_tiny_singlecls.yaml  channelsformer_tiny_wchannelemb.yaml  channelvit_small.yaml  channelvit_tiny.yaml  channelvit_tiny_wochannelemb.yaml
channelsformer/data/: aug_cell.py  build.py  imagenet.py  jumpcp.py  utils.py
channelsformer/models/: __init__.py  channelsformer.py  models_utils.py
channelsformer/scripts/imagenet/: 1_channelsformer_tiny.sh  2_channelsformer_small.sh  3_channelsformer_tiny_singlecls.sh  4_channelsformer_wchannelemb.sh  5_channelvit_tiny.sh  6_channelvit_small.sh  7_channelvit_tiny_wochannelemb.sh  8_channelsformer_tiny_spacefirst.sh
channelsformer/scripts/jumpcp/: 1_channelsformer_tiny_bs256.sh  2_channelsformer_small_bs256.sh  3_channelsformer_tiny_singlecls_bs256.sh  (+6 more)
channelsformer/utils/: cosine_lr.py  logger.py  lr_scheduler.py  optimizer.py  utils.py
examples/: channelsformer.py
tests/: __init__.py  test_channelsformer.py  test_data.py
